docs/tests/parser/expressions/invalid/ExprSizeofMissingOpenParen.b
fn void test() {
    let int x = sizeof int;
}
